# pysatMissions

./: .codeclimate.yml  .flake8  .python-version  .readthedocs.yml  .travis.yml  .zenodo.json  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  description.txt  pyproject.toml  pysat_requirements.txt  pysat_sgp4.py  requirements.txt  setup.cfg  setup.py  test_requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  external_rc.yml  main.yml  pip_rc_install.yml  pysat_rc.yml  python-package.yml
docs/: Makefile  citing.rst  conf.py  index.rst  installation.rst  introduction.rst  methods.rst  references.rst  requirements.txt  supported_instruments.rst  tutorial.rst
methods/: apexpy_methods.py
pysatMissionPlanning/: __init__.py
pysatMissionPlanning/instruments/: __init__.py  _core.py  pysat_ephem.py  pysat_sgp4.py
pysatMissionPlanning/methods/: __init__.py  aacgmv2.py  apexpy.py  plot.py  pyglow.py  simulators.py  spacecraft.py
pysatMissionPlanning/tests/: test_core.py  test_instruments.py  test_methods_aacgmv2.py  test_methods_apexpy.py  test_methods_pyglow.py  test_methods_spacecraft.py
pysatMissions/: __init__.py  plot.py
pysatMissions/instruments/: __init__.py  _core.py  missions_ephem.py  missions_sgp4.py  missions_skyfield.py  pysat_ephem.py  pysat_sgp4.py
pysatMissions/instruments/methods/: __init__.py  orbits.py
pysatMissions/methods/: __init__.py  aacgmv2.py  apexpy.py  empirical.py  magcoord.py  pyglow.py  spacecraft.py
pysatMissions/tests/: __init__.py  test.plot.py  test_core.py  test_deprecation.py  test_inst_methods_orbits.py  test_instruments.py  test_methods_aacgmv2.py  test_methods_apexpy.py  test_methods_empirical.py  test_methods_magcoord.py  test_methods_pyglow.py  test_methods_spacecraft.py  test_plot.py  test_utils.py
pysatMissions/utils/: __init__.py  _core.py
