[metadata]
name = pysatMissions
version = file: pysatMissions/version.txt
url = https://github.com/pysat/pysatMissions
author = Jeff Klenzing, Russell Stoneback
author_email = pysat.developers@gmail.com
description = 'Mission Planning toolkit for pysat'
keywords =
  pysat
  ionosphere
  cubesat
  satellite
  ephemeris
  orbit
classifiers =
  Development Status :: 3 - Alpha
  Topic :: Scientific/Engineering :: Physics
  Topic :: Scientific/Engineering :: Atmospheric Science
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX :: Linux
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

  [options]
  python_requires = >= 3.5
  setup_requires =
    setuptools >= 38.6
    pip >= 10
  include_package_data = True
  zip_safe = False
  packages = find:
  install_requires = file: requirements.txt

[tool:pytest]
markers =
    all_inst: tests all instruments
    download: tests for downloadable instruments
    no_download: tests for instruments without download support
    first: first tests to run
    second: second tests to run
flake8-ignore =
  *.py W503
  docs/conf.py ALL
