[metadata]
name = pysatMissions
version = file: pysatMissions/version.txt
url = https://github.com/pysat/pysatMissions
author = Jeff Klenzing, Russell Stoneback
author_email = pysat.developers@gmail.com
description = 'Mission Planning toolkit for pysat'
keywords =
  pysat
  ionosphere
  cubesat
  satellite
  ephemeris
  orbit
  mission-planning
classifiers =
  Development Status :: 3 - Alpha
  Topic :: Scientific/Engineering :: Physics
  Topic :: Scientific/Engineering :: Atmospheric Science
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX :: Linux
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
setup_requires =
  setuptools >= 38.6
  pip >= 10
include_package_data = True
zip_safe = False
packages = find:
install_requires =
  aacgmv2
  apexpy
  geospacepy
  numpy
  OMMBV
  pandas
  pysat>=3.0
  pyEphem
  sgp4>=2.7


[coverage:report]

[flake8]
max-line-length = 90
ignore =
  D200
  D202
  W503

[tool:pytest]
markers =
    all_inst: tests all instruments
    download: tests for downloadable instruments
    no_download: tests for instruments without download support
    first: first tests to run
    second: second tests to run
